--- a/trunk/themes/ieeecs-DigitalLibrary-theme/docroot/css/forms.css
+++ b/trunk/themes/ieeecs-DigitalLibrary-theme/docroot/css/forms.css
@@ -7,13 +7,17 @@ fieldset {
 	padding-top: 0;
 }
 
+.ie7 .aui-fieldset {
+	zoom: 1;
+}
+
 .aui-fieldset {
 	border-width: 0;
 	padding: 0;
 	position: relative;
 }
 
-.configuration-popup .aui-fieldset {
+.aui-dialog-iframe-popup .aui-fieldset {
 	margin-bottom: 0;
 }
 
@@ -102,7 +106,7 @@ input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hove
 	color: #369;
 }
 
-input[type="submit"], input[type="button"], input[type="reset"], button, .lfr-actions, .lfr-actions ul {
+input[type="submit"], input[type="button"], input[type="reset"], button, .lfr-actions.lfr-extended, .lfr-actions.lfr-extended ul {
 	background: #D4D4D4 url(../images/portlet/header_bg.png) repeat-x 0 0;
 	border: 1px solid;
 	border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
@@ -111,20 +115,20 @@ input[type="submit"], input[type="button"], input[type="reset"], button, .lfr-ac
 	text-shadow: 1px 1px #FFF;
 }
 
-.aui-button-disabled input[type], .aui-button-disabled button, .aui-button-disabled input[type]:hover, .aui-button-disabled input[type]:focus, .aui-button-disabled button:hover, .aui-button-disabled button:focus {
+.aui-button-disabled input[type], .aui-button-disabled button, .aui-button-disabled input[type]:hover, .aui-button-disabled input[type]:focus, .aui-button-disabled button:hover, .aui-button-disabled button:focus, .aui-buttonitem-disabled, .aui-buttonitem-disabled:hover {
 	background: #D4D4D4 url(../images/portlet/header_bg.png) repeat-x 0 0;
 	border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
 	color: #555;
 	opacity: 0.5;
 }
 
-input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover, button:hover, .lfr-actions:hover, .lfr-actions:hover ul {
+input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover, button:hover, .lfr-actions.lfr-extended:hover, .lfr-actions.lfr-extended:hover ul {
 	background: #B9CED9 url(../images/application/state_hover_bg.png) repeat-x 0 0;
 	border-color: #627782;
 	color: #369;
 }
 
-input[type="submit"]:focus, input[type="button"]:focus, input[type="reset"]:focus, button:focus, .lfr-actions:focus, .lfr-actions:focus ul {
+input[type="submit"]:focus, input[type="button"]:focus, input[type="reset"]:focus, button:focus, .lfr-actions.lfr-extended:focus, .lfr-actions.lfr-extended:focus ul {
 	background: #EBEBEB url(../images/application/state_active_bg.png) repeat-x 0 0;
 	border-color: #555;
 }
@@ -162,7 +166,7 @@ input.focus, textarea.focus, .ie6 input.focus, .ie6 textarea.focus {
 	color: #555;
 }
 
-.ie .aui-button-disabled input {
+.ie .aui-button-disabled input, .aui-buttonitem-disabled, .aui-buttonitem-disabled:hover {
 	-ms-filter: alpha(opacity=50);
 	filter: alpha(opacity=50);
 }
