--- a/trunk/themes/ieeecs-DigitalLibrary-theme/docroot/templates/portal_normal.vm
+++ b/trunk/themes/ieeecs-DigitalLibrary-theme/docroot/templates/portal_normal.vm
@@ -22,11 +22,69 @@
 	<script type="text/javascript" src="/ieeecs-DigitalLibrary-theme/js/dockbar.customizable.js"></script>
 		
 	<link rel="stylesheet" type="text/css" href="/ieeecs-DigitalLibrary-theme/css/bootstrap.css">
-	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/ieeecs-DigitalLibrary-theme/css/_style_08282013_1720.css" media="screen">	
 
 	<link rel="shortcut icon" href="/ieeecs-DigitalLibrary-theme/images/favicon.ico">
 	<link rel="icon" href="/ieeecs-DigitalLibrary-theme/images/favicon.ico">
+
+    <style>
+        div.header-carousel-wrapper {
+        height: 100px;
+        overflow: hidden;
+        position:relative;
+        }
+        ul.carousel {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            width: 1600px;
+            height: 100px;
+            overflow: hidden;
+            position:relative;
+        }
+        ul.carousel li {
+            width: 200px;
+            height: 100px;
+            float: left;
+            display:block;
+        }
+
+        .nav-back-btn-container {
+            position: absolute;
+            z-index: 3;
+            top: 0px;
+            left: 0px;
+            background-color: rgba(0,0,0,0.5);
+            height: 100px;
+            width: 30px;
+        }
+        .nav-next-btn-container {
+            position: absolute;
+            z-index: 3;
+            top: 0px;
+            right: 0px;
+            background-color: rgba(0,0,0,0.5);
+            height: 100px;
+            width: 30px;
+        }
+        a.carousel-nav-btn {
+            position: absolute;
+            z-index: 4;
+            font-size: 30px;
+            font-weight: 500;
+            height: 100px;
+            width: inherit;
+            color: #ffffff;
+        }
+        a.carousel-nav-btn:hover { text-decoration: none; color: #ffffff;}
+        .carousel-nav-btn .back-btn, .carousel-nav-btn .next-btn  {
+            position: absolute;
+            top: 35px;
+            width: inherit;
+            text-align: center;
+        }
+    </style>
 
 </head>
 
@@ -56,10 +114,27 @@
 				</div>				
 			</div>						
 			<div class="clearBoth"></div>
-			<div class="headerCommunityCatchPhrase">The Community for Technology Leaders :</div>			
-		</div>		
-		<div class="headerSlider"></div>
+			<div class="headerCommunityCatchPhrase">The Community for Technology Leaders :</div>
+		</div>
 
+        <div class="header-carousel-wrapper">
+            <div class="nav-back-btn-container">
+                <a href="#" onclick="$('#carousel').prevPage();" class="carousel-nav-btn"><span class="back-btn"><i class="fa fa-chevron-left"></i></span></a>
+            </div>
+            <div class="nav-next-btn-container">
+                <a href="#" onclick="$('#carousel').nextPage();" class="carousel-nav-btn next-btn"><span class="next-btn"><i class="fa fa-chevron-right"></i></span></a>
+            </div>
+            <ul id="carousel" class="carousel">
+                <li><a href="#"><img src="http://lorempixel.com/200/200/"/></a></li>
+                <li><a href="#"><img src="http://lorempixel.com/200/200/"/></a></li>
+                <li><a href="#"><img src="http://lorempixel.com/200/200/"/></a></li>
+                <li><a href="#"><img src="http://lorempixel.com/200/200/"/></a></li>
+                <li><a href="#"><img src="http://lorempixel.com/200/200/"/></a></li>
+                <li><a href="#"><img src="http://lorempixel.com/200/200/"/></a></li>
+                <li><a href="#"><img src="http://lorempixel.com/200/200/"/></a></li>
+                <li><a href="#"><img src="http://lorempixel.com/200/200/"/></a></li>
+            </ul>
+        </div>
 </div>
 
 <div id="wrapper">
@@ -185,7 +260,14 @@
 	}	
 
 </script>
-
+<script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.5/hammer.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.5/jquery.hammer.min.js"></script>
+<script src="/ieeecs-DigitalLibrary-theme/js/dragswipe.jquery.js" type="text/javascript"></script>
+<script>
+    $(document).ready(function() {
+    $('#carousel').dragswipe({width: 200,current_page_element: '#current_page',total_pages_element:'#total_pages'});
+    });
+</script>
 </body>
 
 $theme.include($bottom_include)
